tests/neg/i20511-1.scala
package pakiet

def toppingPrice(size: Int): Double = ???

def crustPrice(crustType: Double): Double = ???

export toppingPrice.apply, crustPrice.apply, crustPrice.unlift // error // error // error // error // error
