tests/neg/i20511-1.check
-- [E083] Type Error: tests/neg/i20511-1.scala:7:7 ---------------------------------------------------------------------
7 |export toppingPrice.apply, crustPrice.apply, crustPrice.unlift // error // error // error // error // error
  |       ^^^^^^^^^^^^
  |       Int => Double is not a valid export prefix, since it is not an immutable path
  |
  | longer explanation available when compiling with `-explain`
-- [E083] Type Error: tests/neg/i20511-1.scala:7:27 --------------------------------------------------------------------
7 |export toppingPrice.apply, crustPrice.apply, crustPrice.unlift // error // error // error // error // error
  |                           ^^^^^^^^^^
  |                           Any is not a valid export prefix, since it is not an immutable path
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg/i20511-1.scala:7:38 --------------------------------------------------------------------------------
7 |export toppingPrice.apply, crustPrice.apply, crustPrice.unlift // error // error // error // error // error
  |                                      ^^^^^
  |                                      no eligible member apply at {
  |                                        def $anonfun(crustType: Double): Double = pakiet.crustPrice(crustType)
  |                                        closure(pakiet.$anonfun:Any)
  |                                      }
-- [E083] Type Error: tests/neg/i20511-1.scala:7:45 --------------------------------------------------------------------
7 |export toppingPrice.apply, crustPrice.apply, crustPrice.unlift // error // error // error // error // error
  |                                             ^^^^^^^^^^
  |                                             Any is not a valid export prefix, since it is not an immutable path
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg/i20511-1.scala:7:56 --------------------------------------------------------------------------------
7 |export toppingPrice.apply, crustPrice.apply, crustPrice.unlift // error // error // error // error // error
  |                                                        ^^^^^^
  |                                          no eligible member unlift at {
  |                                            def $anonfun(crustType: Double): Double = pakiet.crustPrice(crustType)
  |                                            closure(pakiet.$anonfun:Any)
  |                                          }
